[preload] Fix double downloads with devtools, disabled cache & reloads

The network inspector calling MemoryCache::EvictResources() when the
document was committed, *after* the link header preloads were
dispatched.

Even though a mechanism to avoid the eviction of unused preloads in
this case was introduced in https://codereview.chromium.org/2385313002,
it wasn't useful when the page was reloaded *twice*, as the preloaded
resource was used in the first load, and wasn't considered an unused
preload anymore.

This CL handles that issue by changing the order of the calls, making
sure that EvictResources is called before the header preloads are
processed. It also removes the older, now-unnecessary mechanism.

Bug: 794958
Change-Id: Ia095862edb9c0e7b2fadf2b159864b675407c52a
Reviewed-on: https://chromium-review.googlesource.com/1127942
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Nate Chapin <japhet@chromium.org>
Commit-Queue: Yoav Weiss <yoav@yoav.ws>
Cr-Commit-Position: refs/heads/master@{#573616}
Former-commit-id: 3017ad45e90c729b4a8a295e449cd46fb52863da